# my_work

./: README.md
my_work/: CMakeLists.txt  package.xml  setup.cfg  setup.py
my_work/my_work/script/: .scannewtop.py.swp  action_client.py  black_grid.py  black_navi.py  box_map_grid.py  cellmidpoint_rviz.py  cellmidpointclicker.py  cellmidpointfollow.py  cellmidpointrvizclicker.py  cellmidpointvisual.py  check_xml.py  coordinate_visualizer.py  coverage_planner.py  create_path.py  enter_house_world.py  field_extraction.py  fields2coverpart1.py  fields2coverpart1_practice.py  fields2coverpart2.py  fields2coverpart2_practice.py  fields2coverpart3.py  fields2coverpart3_practice.py  fieldsmapextract.py  fieldsmove.py  fieldspathplan.py  followclickedpoints.py  following_waypoints_wall.py  gcm_to_xml.py  givingcmdvel.py  goal_sender.py  grid_layer.py  gridnavi.py  headlandpathfollow.py  initialposetest.py  initposemaker.py  main_cjg.py  main_cjg_world.py  maintain_dist.py  map_black.py  map_box_test.py  (+35 more)
my_work/param/: waypoints.yaml
